added example for graph.fromJSON api using the json to construct the graph rather than mannually making the graph

--- a/demo/test_3.html
+++ b/demo/test_3.html
@@ -29,7 +29,7 @@
             background: {
                 color: 'white'
             },
-            interactive: false
+            interactive: true
         });
 
         var rect = new joint.shapes.standard.Rectangle();
