--- a/demo/test_5.html
+++ b/demo/test_5.html
@@ -93,6 +93,15 @@
                             "target": {
                                 "id": "2"
                             },
+                            "labels": [
+                                {
+                                    "attrs": {
+                                        "text": {
+                                            "text": "Hello, World!"
+                                        }
+                                    }
+                                }
+                            ],
                             "id": "c7359e16-dff1-4f5a-ad7d-5bd7e23a1f12",
                         }
                     ]
