--- a/demo/parseJson.html
+++ b/demo/parseJson.html
@@ -10,12 +10,8 @@
     <div id="myholder"></div>
 
     <!-- dependencies -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/graphlib/2.1.8/graphlib.min.js"
-        integrity="sha512-KV/PFSmTCD8e1BUHY6DJVSi/LW/2kLPzC+0IT2ydsi+sW14TJUFxFsitd8HZVYb2b6KiMx3T29H2z7pcNgtUmQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.5/dagre.min.js"
-        integrity="sha512-psLUZfcgPmi012lcpVHkWoOqyztollwCGu4w/mXijFMK/YcdUdP06voJNVOJ7f/dUIlO2tGlDLuypRyXX2lcvQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/graphlib/2.1.8/graphlib.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.5/dagre.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone.js"></script>
@@ -201,6 +197,10 @@
             var newModel = new CellLinkeModel(entity.from, entity.to, entity.desc)
             cells.push(newModel.getModel());
         });
+
+        console.log('entities:', jsonToParse.entities);
+        console.log('links:', jsonToParse.links);
+        console.log('cells:', cells);
 
         var graph = new joint.dia.Graph;
 
